Uninstalled unnecessary package

--- a/portfolio-website/src/style/App.css
+++ b/portfolio-website/src/style/App.css
@@ -101,7 +101,7 @@ p, h1, h2, span {
 }
 
 .Nav {
-    position: fixed;
+    position: absolute;
     right: 100px;
     bottom: 250px;
     z-index: 999;
