--- a/portfolio-website/src/components/Wrappers/ContactWrapper/ContactWrapper.css
+++ b/portfolio-website/src/components/Wrappers/ContactWrapper/ContactWrapper.css
@@ -17,12 +17,12 @@
     text-align: center;
     text-transform: uppercase;
     font-weight: 800;
-    -webkit-text-stroke: 4px #FFFFFF;
     letter-spacing: 0.1rem;
+    font-family: 'Akira Expanded';
 }
 
 .WrapperWordDark {
-    color: transparent;
+    font-weight: 500;
 }
 
 #WrapperTextUpperContact {
