--- a/portfolio-website/src/components/BackToTop/BackToTop.css
+++ b/portfolio-website/src/components/BackToTop/BackToTop.css
@@ -17,6 +17,13 @@
     font-weight: 500;
 }
 
+.CircleText span {
+    position: absolute;
+    left: 50%;
+    bottom: 27.5px;
+    transform-origin: 0 100px;
+}
+
 .Arrow {
     color: #FFFFFF;
     font-size: 32px;
