--- a/portfolio-website/src/components/BackToTop/BackToTop.css
+++ b/portfolio-website/src/components/BackToTop/BackToTop.css
@@ -1,7 +1,7 @@
 .BackTopButton {
     position: fixed;
-    bottom: 5%;
-    right: 5%;
+    bottom: 2.5%;
+    right: 1%;
     z-index: 999;
 }
 
@@ -27,4 +27,7 @@
 .Arrow {
     color: #FFFFFF;
     font-size: 32px;
+    position: absolute;
+    right: 5%;
+    bottom: -15px;
 }
